--- a/planning/planning_request_adapter_plugins/CMakeLists.txt
+++ b/planning/planning_request_adapter_plugins/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
   src/fix_start_state_collision.cpp
   src/fix_start_state_path_constraints.cpp
   src/fix_workspace_bounds.cpp
+  src/add_cubic_time_parameterization.cpp
   src/add_time_parameterization.cpp)
 
 add_library(${MOVEIT_LIB_NAME} ${SOURCE_FILES})
